# vulkan

./: .gitignore  Doxyfile  Makefile.in  README.md  config.h.in  configure  configure.ac
src/: Makefile.am  Makefile.in  app_config.h  main.cpp  validation_layers.cpp  validation_layers.h  valium.cpp  valium.h  valium_command_pool.cpp  valium_command_pool.h  valium_device.cpp  valium_device.h  valium_fixed_functions.cpp  valium_fixed_functions.h  valium_graphics.cpp  valium_graphics.h  valium_queue.cpp  valium_queue.h  valium_renderpass.cpp  valium_renderpass.h  valium_swapchain.cpp  valium_swapchain.h  valium_view.cpp  valium_view.h  window.cpp  window.h
src/shaders/: bad_triangle.glsl  bad_triangle.vert
